[package]
name = "oxideav-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Codec traits and registry for oxideav"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "codec", "decoder", "encoder", "pure-rust"]
categories = ["multimedia::encoding"]

[dependencies]
oxideav-core = { workspace = true }
