[package]
name = "oxideav-codec"
version = "0.1.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Codec (Decoder + Encoder) traits and registry for oxideav — pure Rust, no C deps"
repository = "https://github.com/OxideAV/oxideav-codec"
homepage = "https://github.com/OxideAV/oxideav-codec"
readme = "README.md"
keywords = ["multimedia", "codec", "decoder", "encoder", "pure-rust"]
categories = ["multimedia::encoding"]

[dependencies]
oxideav-core = "0.1"
